--- a/WebDev2020/Views/MOD/blog.cshtml
+++ b/WebDev2020/Views/MOD/blog.cshtml
@@ -19,7 +19,7 @@
         <li>@viewData[i].post</li>
         <li>@viewData[i].firstName</li>
         <li>@viewData[i].lastName</li>
-        <li>@viewData[i].userID</li>
+        <li>@viewData[i].userId</li>
         <li>@viewData[i].urlPath</li>
     }
 </body>
