--- a/WebDev2020/Views/Home/Header.cshtml
+++ b/WebDev2020/Views/Home/Header.cshtml
@@ -33,11 +33,11 @@
                         </div>
                         <div class="col-xs-8">
                             <div class="box ">
-                                <li><a class="underlines" href="portfolio.html">HOMEPAGE</a></li>
-                                <li> <a class="underlines" href="about.html">MAKERSPACE</a></li>
+                                <li> @Html.ActionLink("Home", "Index", "Home", null, new { @class = "underlines" })</li>
+                                <li> @Html.ActionLink("Makerspace", "Makerspace", "Home", null, new { @class = "underlines" })</li>
                                 <li> <a><img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/LOGO.png" alt="" srcset=""> </a></li>
-                                <li> <a class="underlines" href="contact.html">ABOUT US</a></li>
-                                <li> <a class="underlines" href="contact.html">MAKERBLOGS</a></li>
+                                <li> <a class="underlines" href="">ABOUT US</a></li>
+                                <li> <a class="underlines" href="">MAKERBLOGS</a></li>
 
                             </div>
                         </div>
