--- a/WebDev2020/Views/Home/Footer.cshtml
+++ b/WebDev2020/Views/Home/Footer.cshtml
@@ -9,8 +9,10 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Content/header-styles.css")" rel="stylesheet" type="text/css" />
-   
-    
+    <link href="@Url.Content("~/Content/frontpage-style.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/flexboxgrid.css")" rel="stylesheet" type="text/css" />
+
+
 </head>
 <body>
     <footer class="footer btm">
