--- a/WebDev2020/Views/Home/Header.cshtml
+++ b/WebDev2020/Views/Home/Header.cshtml
@@ -36,7 +36,7 @@
                                 <li> @Html.ActionLink("Home", "Index", "Home", null, new { @class = "underlines" })</li>
                                 <li> @Html.ActionLink("Makerspace", "Makerspace", "Home", null, new { @class = "underlines" })</li>
                                 <li> <a><img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/LOGO.png" alt="" srcset=""> </a></li>
-                                <li> <a class="underlines" href="">ABOUT US</a></li>
+                                <li> @Html.ActionLink("ABOUT US", "About", "Home", null, new { @class = "underlines" })</li>
                                 <li> @Html.ActionLink("Makerblog", "Makerblog", "Home", null, new { @class = "underlines" })</li>
 
                             </div>
