--- a/WebDev2020/Views/Home/Index.cshtml
+++ b/WebDev2020/Views/Home/Index.cshtml
@@ -86,14 +86,14 @@
                 <div class="box space2">
 
 
-                    <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo3-scaled.jpg" id="main">
+                    <img class="img-size" src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo3-scaled.jpg" id="main">
                     <div id="thumbnails">
-                        <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo3-scaled.jpg">
-                        <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo4.jpg">
-                        <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo5-scaled.jpg">
-                        <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo6-scaled.jpg">
-                        <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo1-scaled.jpg">
-                        <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo2-scaled.jpg">
+                        <img class="img-size" src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo3-scaled.jpg">
+                        <img class="img-size" src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo4.png">
+                        <img class="img-size" src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo5.png">
+                        <img class="img-size" src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo6.png">
+                        <img class="img-size" src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo1.png">
+                        <img class="img-size" src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/photo2.png">
                     </div>
                 </div>
             </div>
@@ -192,4 +192,5 @@
     </section>
     @RenderPage("~/Views/Home/Footer.cshtml")
     <script src="@Url.Content("~/Scripts/header.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/Frontpage-js.js")" type="text/javascript"></script>
 </body>
