--- a/WebDev2020/Views/Home/Settings.cshtml
+++ b/WebDev2020/Views/Home/Settings.cshtml
@@ -16,7 +16,7 @@
         <div class="containers">
 
             <div class="profilepic">
-                <h1>profile settings</h1>
+                <h1 class="big-text">profile settings</h1>
                 <img src="https://tomyum.alandenz.dk/wp-content/uploads/2020/12/Group-160.png" />
 
                 <h3>welcome, Oliver Kusk</h3>
