--- a/WebDev2020/Content/frontpage-style.css
+++ b/WebDev2020/Content/frontpage-style.css
@@ -267,6 +267,12 @@ h1, h2, h3, h4, h5, title {
     transform: scale(1.05);
 }
 
+
+.img-size {
+    
+}
+
+
 #main {
     width: 100%;
     height: 100%;
