--- a/WebDev2020/Views/Home/About.cshtml
+++ b/WebDev2020/Views/Home/About.cshtml
@@ -46,7 +46,7 @@
                     </p>
                 </div>
             </aside>
-            <section>
+            <div class="div-box">
                 <div class="top">
                     <div class="join"><h2 class="blue_underline">Join Us</h2></div>
                     <div class="join-p">
@@ -75,7 +75,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
     </div>
     @RenderPage("~/Views/Home/Footer.cshtml")
