--- a/WebDev2020/Content/header-styles.css
+++ b/WebDev2020/Content/header-styles.css
@@ -157,7 +157,7 @@ header .header-cases {
 }
 
 .mydiv {
-    padding-left: 70px;
+    padding-left: 150px;
 }
 
 
@@ -165,10 +165,9 @@ header .header-cases {
 
 @media (max-width: 980px) {
     .navbar__input {
-        display: none;
-        background-color: #f3f3f3;
-        border: 1px solid #34343f;
-        width: fit-content;
+        background-color: #ffff;
+        border: 1px solid #F8BB74 !important;
+        width: 230px;
         height: 36px;
         border-radius: 18px;
         outline: none;
@@ -179,6 +178,9 @@ header .header-cases {
         color: #c0c7da;
         letter-spacing: .5px;
         word-spacing: 1px;
+        position: absolute;
+        right: 80px;
+        top: -14px;
     }
 
     .navbar__button {
@@ -257,12 +259,15 @@ header .header-cases {
         color: #c0c7da;
         letter-spacing: .5px;
         word-spacing: 1px;
+        position: absolute;
+        right: 80px;
+        top: -14px;
     }
 
     .navbar__button {
         position: absolute;
-        top: 3px;
-        right: -50px;
+        top: -11px;
+        right: 85px;
         height: 30px;
         width: 30px;
         border-radius: 50%;
